// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/svg Test Suite A2HS Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
  <path
    d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`components/svg Test Suite Book Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0H24V24H0z"
    fill="none"
  />
  <path
    d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"
  />
  <path
    d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99zM13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83zM17.5 14.33c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24z"
  />
</svg>
`;

exports[`components/svg Test Suite Business Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0zm10 5h4v2h-4zm0 0h4v2h-4z"
    fill="none"
  />
  <path
    d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z"
  />
</svg>
`;

exports[`components/svg Test Suite Close Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`components/svg Test Suite Copy Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
  />
</svg>
`;

exports[`components/svg Test Suite Description Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
  />
</svg>
`;

exports[`components/svg Test Suite Download Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`components/svg Test Suite EmojiAstonished Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="255.984"
    cy="246.672"
    fill="#ffd93b"
    r="246.672"
  />
  <path
    d="M502.656 246.672c0 136.288-110.464 246.672-246.672 246.672-77.552 0-146.768-35.776-192.016-91.808 42.32 34.224 96.208 54.656 154.864 54.656 136.208 0 246.672-110.384 246.672-246.672 0-58.656-20.432-112.544-54.656-154.864 55.968 45.248 91.808 114.464 91.808 192.016z"
    fill="#f4c534"
  />
  <path
    d="M234.704 202.96c0 45.328-36.656 82.144-82.144 82.144-45.328 0-82.144-36.816-82.144-82.144 0-45.472 36.816-82.288 82.144-82.288 45.488 0 82.144 36.8 82.144 82.288zm206.896 0c0 45.328-36.656 82.144-82.128 82.144-45.328 0-82.144-36.816-82.144-82.144 0-45.472 36.816-82.288 82.144-82.288 45.472 0 82.128 36.8 82.128 82.288z"
    fill="#fff"
  />
  <g
    fill="#3e4347"
  >
    <path
      d="M485.504 190.464h-33.168c-6.112-45.872-45.424-81.392-92.88-81.392-35.12 0-65.76 19.472-81.792 48.176-4.352 7.792-12.576 12.336-21.504 12.272h-.4c-8.88.064-17.088-4.496-21.408-12.256-16.032-28.736-46.656-48.208-81.792-48.208-47.456 0-86.672 35.52-92.8 81.392H26.464v24.832h33.584c5.76 42.848 40.592 77.328 84.432 81.04 55.504 4.704 102.912-39.552 101.712-95.36.944-4.672 4.88-8.24 9.808-8.24 5.024 0 9.712 3.632 9.712 10.224 0 54.096 46.096 97.664 101.104 93.44 44.016-3.376 79.488-37.792 85.232-81.104h33.456v-24.816zm-332.928 83.024c-38.896 0-70.544-31.648-70.544-70.528 0-38.976 31.648-70.688 70.544-70.688s70.528 31.712 70.528 70.688c0 38.88-31.632 70.528-70.528 70.528zm206.896 0c-38.896 0-70.544-31.648-70.544-70.528 0-38.976 31.648-70.688 70.544-70.688S430 163.984 430 202.96c0 38.88-31.648 70.528-70.528 70.528z"
    />
    <path
      d="M370.176 189.68c0 17.264-13.904 31.488-31.376 31.488-17.264 0-31.376-14.224-31.376-31.488 0-17.376 14.112-31.6 31.376-31.6 17.472 0 31.376 14.224 31.376 31.6z"
    />
  </g>
  <ellipse
    cx="349.691"
    cy="178.712"
    fill="#fff"
    rx="10.352"
    ry="7.152"
    transform="rotate(-135 349.692 178.714)"
  />
  <path
    d="M204.608 189.68c0 17.264-13.904 31.488-31.376 31.488-17.264 0-31.376-14.224-31.376-31.488 0-17.376 14.112-31.6 31.376-31.6 17.472 0 31.376 14.224 31.376 31.6z"
    fill="#3e4347"
  />
  <ellipse
    cx="184.122"
    cy="178.697"
    fill="#fff"
    rx="10.352"
    ry="7.152"
    transform="rotate(-135 184.122 178.699)"
  />
  <path
    d="M467.968 93.68c-6.688 4.032-14.304 1.792-17.76-3.808C396.8 8.16 313.024 48.496 309.504 50.256c-6.448 3.232-14.08.592-17.312-5.712-3.072-6.448-.592-14.096 5.872-17.312 1.024-.448 107.984-52.08 173.568 48.56 3.952 6 2.192 13.92-3.664 17.888zm-423.952 0c6.688 4.016 14.288 1.792 17.744-3.824C115.168 8.144 198.944 48.48 202.464 50.24c6.448 3.232 14.08.592 17.312-5.712 3.088-6.448.592-14.096-5.872-17.312-1.024-.448-107.984-52.08-173.568 48.56-3.952 6.016-2.192 13.936 3.68 17.904z"
    fill="#3e4347"
  />
  <ellipse
    cx="255.984"
    cy="402.4"
    fill="#ffd93b"
    rx="89.232"
    ry="109.568"
  />
  <ellipse
    cx="255.984"
    cy="402.4"
    fill="#3e4347"
    rx="69.632"
    ry="87.68"
  />
</svg>
`;

exports[`components/svg Test Suite EmojiNerd Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="256"
    cy="256"
    fill="#ffd93b"
    r="256"
  />
  <path
    d="M351.936 367.216c-7.36 40.8-39.84 81.92-96 81.92s-88.64-41.12-95.84-81.92c-1.12-6.08 3.04-11.84 9.12-12.96 6.08-.96 11.84 3.04 12.96 9.12 5.6 31.52 30.56 63.36 73.76 63.36s68.32-31.84 73.92-63.36c1.12-6.08 6.88-10.08 12.96-9.12 6.08 1.104 10.24 6.88 9.12 12.96z"
    fill="#3e4347"
  />
  <path
    d="M512 256c0 141.44-114.64 256-256 256-80.48 0-152.32-37.12-199.28-95.28 43.92 35.52 99.84 56.72 160.72 56.72 141.36 0 256-114.56 256-256 0-60.88-21.2-116.8-56.72-160.72C474.8 103.68 512 175.52 512 256z"
    fill="#f4c534"
  />
  <path
    d="M235.44 225.232c0 43.808-35.424 79.376-79.376 79.376-43.792 0-79.376-35.568-79.376-79.376 0-43.952 35.584-79.52 79.376-79.52 43.952 0 79.376 35.584 79.376 79.52z"
    fill="#fff"
  />
  <circle
    cx="156.064"
    cy="225.12"
    fill="#3e4347"
    r="36.16"
  />
  <path
    d="M276.624 225.088c0-43.808 35.424-79.376 79.376-79.376 43.808 0 79.376 35.568 79.376 79.376 0 43.952-35.568 79.52-79.376 79.52-43.952.016-79.376-35.568-79.376-79.52z"
    fill="#fff"
  />
  <path
    d="M485.264 213.168H445.76c-5.92-44.336-43.888-78.64-89.76-78.64-33.952 0-63.552 18.816-79.04 46.56-4.208 7.536-12.16 11.92-20.784 11.872h-.384c-8.592.064-16.512-4.336-20.688-11.84-15.488-27.76-45.088-46.592-79.04-46.592-45.856 0-83.744 34.336-89.68 78.64H26.736v24h39.92c5.568 41.408 39.216 74.736 81.6 78.32 53.632 4.544 99.44-38.224 98.304-92.144.912-4.512 4.72-7.968 9.472-7.968 4.864 0 9.376 3.504 9.376 9.872 0 52.288 44.56 94.384 97.696 90.304 42.528-3.264 76.832-36.528 82.368-78.384h39.776v-24h.016zm-329.2 80.224c-37.584 0-68.176-30.592-68.176-68.16 0-37.664 30.576-68.304 68.176-68.304 37.584 0 68.16 30.64 68.16 68.304 0 37.584-30.576 68.16-68.16 68.16zm199.936 0c-37.584 0-68.176-30.592-68.176-68.16 0-37.664 30.576-68.304 68.176-68.304 37.584 0 68.16 30.64 68.16 68.304 0 37.584-30.576 68.16-68.16 68.16z"
    fill="#3e4347"
  />
  <ellipse
    cx="169.695"
    cy="211.503"
    fill="#fff"
    rx="10"
    ry="6.48"
    transform="rotate(-135 169.696 211.505)"
  />
  <circle
    cx="356"
    cy="225.12"
    fill="#3e4347"
    r="36.16"
  />
  <ellipse
    cx="369.623"
    cy="211.559"
    fill="#fff"
    rx="10"
    ry="6.48"
    transform="rotate(-135 369.625 211.56)"
  />
  <path
    d="M413.776 107.456c-5.12 2.992-12.256 1.536-15.52-4.064-26.672-45.648-82.272-35.552-82.864-35.408-6.176 1.2-12.048-2.864-13.264-9.04-1.056-6.176 2.864-12.064 9.04-13.264 2.864-.448 71.872-12.96 106.672 46.256 3.168 5.424 1.36 12.368-4.064 15.52zm-315.552 0c5.12 2.992 12.256 1.536 15.52-4.064C140.416 57.744 196 67.84 196.608 67.984c6.176 1.2 12.048-2.864 13.264-9.04 1.056-6.176-2.864-12.064-9.04-13.264-2.864-.448-71.872-12.96-106.672 46.256-3.168 5.424-1.36 12.368 4.064 15.52z"
    fill="#3e4347"
  />
</svg>
`;

exports[`components/svg Test Suite EmojiUgly Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="255.995"
    cy="265.526"
    fill="#ffd93b"
    r="246.464"
  />
  <path
    d="M502.459 265.526c0 136.176-110.368 246.464-246.464 246.464-77.472 0-146.64-35.728-191.856-91.728 42.288 34.192 96.112 54.608 154.736 54.608 136.096 0 246.448-110.288 246.448-246.448 0-58.608-20.416-112.448-54.608-154.736 55.92 45.2 91.744 114.368 91.744 191.84z"
    fill="#f4c534"
  />
  <path
    d="M429.243 361.83c-37.792 68.096-101.248 113.056-173.296 113.056S120.443 429.91 82.651 361.83c-5.744-10.624 2.368-24.368 12.48-21.456 107.328 30.192 214.48 30.192 321.632 0 10.112-2.912 18.384 10.832 12.48 21.456z"
    fill="#3e4347"
  />
  <path
    d="M255.947 474.902c36.672 0 71.088-11.712 101.056-32.128-2.448-3.952-5.152-7.776-8.304-11.344-19.776-22.448-55.632-29.168-86.8-20.08-12.336 3.728-26.448 5.392-42.528 4.528-3.12-.16-6.224-.48-9.312-.784-20.144-2.352-40.224 3.664-51.184 17.392-2.272 2.8-4.224 5.792-6.016 8.832 30.448 21.312 65.568 33.584 103.088 33.584z"
    fill="#e24b4b"
  />
  <circle
    cx="353.275"
    cy="219.222"
    fill="#f4c534"
    r="93.552"
  />
  <ellipse
    cx="353.275"
    cy="219.238"
    fill="#fff"
    rx="76.768"
    ry="76.688"
  />
  <path
    d="M158.219 130.23c-51.472 0-93.104 41.76-93.104 93.104 0 26.336 10.944 50.048 28.48 66.976 8.816-3.456 18.816-5.488 30.128-5.488 27.36 0 47.328 11.36 60.096 27.952 38.864-11.136 67.344-46.88 67.344-89.44.016-51.344-41.616-93.104-92.944-93.104z"
    fill="#f4c534"
  />
  <path
    d="M166.107 146.454c-42.32 0-80.096 34.48-84.448 76.88-1.92 18.736 2.976 35.872 12.656 49.2 8.704-2.448 18.176-3.888 28.592-3.888 26.912 0 48.048 8.928 63.52 22.896 25.792-12.8 45.184-38.496 48.24-68.192 4.336-42.416-26.352-76.896-68.56-76.896z"
    fill="#fff"
  />
  <ellipse
    cx="179.483"
    cy="197.862"
    fill="#3e4347"
    rx="38.288"
    ry="38.352"
  />
  <ellipse
    cx="193.295"
    cy="184.097"
    fill="#fff"
    rx="11.712"
    ry="7.504"
    transform="rotate(-135 193.296 184.099)"
  />
  <ellipse
    cx="340.091"
    cy="246.934"
    fill="#3e4347"
    rx="38.288"
    ry="38.352"
  />
  <ellipse
    cx="337.418"
    cy="267.278"
    fill="#fff"
    rx="13.568"
    ry="8.688"
    transform="rotate(-135 337.42 267.28)"
  />
  <path
    d="M484.379 135.254c-110.256-77.552-134.896-104.4-191.936-53.136-31.968 26.992-56 18.256-64.08 3.392-9.296-16.752-8.608-37.952-14.016-54.528-4.272-14.032-12.256-9.072-26.032-1.392-44.912 25.6-120.144 79.968-152.032 100.736 34.72-34.64 97.168-91.04 141.712-118.288 15.408-8.144 42.816-27.616 57.616 11.856 2.48 7.552 8.992 48.448 15.088 52.528 24.864 4.176 36.72-33.184 77.024-39.12 48.672-9.104 96.528 38.48 139.856 80.096 9.872 9.84 15.568 16.32 16.8 17.856z"
    fill="#3e4347"
  />
  <path
    d="M140.267 351.062c36.656 7.552 73.168 11.408 109.68 11.712l-5.552 41.744c-.928 4.304-4.928 7.232-9.088 6.624-13.088-1.696-27.264-5.392-34.96-7.552-3.392-1.088-5.696-4.016-6-7.552l-2.16-31.264-6.928 29.264c-1.072 4.624-5.696 7.392-10.16 6.32-12.784-3.088-26.64-9.088-34.048-12.64-3.392-1.536-5.232-5.088-4.768-8.784l3.984-27.872zm225.808 1.072v36.8c0 3.232-1.84 6.16-4.784 7.552-12.016 5.696-26.8 9.392-35.888 11.392-4.624 1.088-9.088-2.16-9.856-6.784l-4.16-40.976c18.192-1.824 36.512-4.448 54.688-7.984zm-204.704 60.384c-3.696-.784-7.232 1.536-8.016 5.232l-4.512 20.704c17.872 13.152 37.456 23.12 58.272 29.264v-31.184c0-1.84-.608-3.696-2-4.928-11.712-10.768-33.12-16.624-43.744-19.088zm197.088 15.456c-.384-1.808-1.76-3.36-3.808-3.568-15.728-1.808-37.84 2.144-46.576 3.84-1.952.544-3.6 2.304-3.36 4.288l.48 26.016-2.944-24.016c-.256-2.128-1.808-3.808-4.032-4-17.792-2.16-43.04 2.32-52.912 4.304-2.288.592-4.064 2.672-3.792 4.816l2.32 34.768c4.016.272 8.048.48 12.112.48 38.16 0 73.856-12.704 104.64-34.688l-2.128-12.24z"
    fill="#fff"
  />
</svg>
`;

exports[`components/svg Test Suite House Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0H24V24H0z"
    fill="none"
  />
  <path
    d="M19 9.3V4h-3v2.6L12 3 2 12h3v8h5v-6h4v6h5v-8h3l-3-2.7zm-9 .7c0-1.1.9-2 2-2s2 .9 2 2h-4z"
  />
</svg>
`;

exports[`components/svg Test Suite Mood Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
  />
</svg>
`;

exports[`components/svg Test Suite Moon Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M462.386 299.769c.41-.419.817-.839 1.223-1.261 7.725-8.038 21.132-.659 18.399 10.148-10.812 42.747-33.518 83.102-68.104 115.812-95.437 90.26-246.857 86.823-338.324-7.457-91.447-94.259-90.577-244.8 2.611-337.988 31.784-31.784 70.248-52.833 110.871-63.14 10.789-2.738 18.352 10.612 10.324 18.322-.925.888-1.843 1.788-2.754 2.699-74.12 74.12-72.967 195.002 3.436 267.669 73.762 70.155 191.11 67.943 262.318-4.804z"
    fill="#fce25c"
  />
  <path
    d="M381.639 450.131c-94.76 62.84-224.34 51.12-306.06-33.12-91.45-94.26-90.58-244.8 2.61-337.99 31.78-31.78 70.24-52.83 110.87-63.14 1.52-.39 2.97-.45 4.33-.25-12.6 8.5-24.56 18.32-35.71 29.47-93.19 93.19-94.06 243.73-2.61 337.99 60.48 62.34 147.18 84.97 226.57 67.04z"
    fill="#fbd307"
  />
  <path
    d="M391.528 203.895l7.162 14.512a7.74 7.74 0 005.828 4.234l16.015 2.327c6.349.923 8.884 8.724 4.29 13.202l-11.589 11.296a7.74 7.74 0 00-2.226 6.851l2.736 15.951c1.084 6.323-5.552 11.145-11.231 8.16l-14.325-7.531a7.744 7.744 0 00-7.204 0l-14.325 7.531c-5.678 2.985-12.315-1.837-11.231-8.16l2.736-15.951a7.74 7.74 0 00-2.226-6.851l-11.589-11.296c-4.594-4.478-2.059-12.28 4.29-13.202l16.015-2.327a7.741 7.741 0 005.828-4.234l7.162-14.512c2.841-5.753 11.045-5.753 13.884 0z"
    fill="#fce25c"
  />
  <path
    d="M369.97 259.501c0 6.16 1.15 12.06 3.25 17.48l-6.56 3.45c-5.68 2.98-12.31-1.84-11.23-8.16l2.74-15.95a7.72 7.72 0 00-2.23-6.85l-11.59-11.3c-4.59-4.48-2.06-12.28 4.29-13.2l16.02-2.33c2.52-.37 4.7-1.95 5.83-4.23l7.16-14.52c2.84-5.75 11.04-5.75 13.88 0l5.9 11.97c-16.25 7.8-27.46 24.41-27.46 43.64z"
    fill="#fbd307"
  />
  <path
    d="M327.03 9.19l10.464 21.202a16.482 16.482 0 0012.409 9.016l23.398 3.4c13.518 1.964 18.916 18.576 9.134 28.111l-16.931 16.504a16.481 16.481 0 00-4.74 14.588l3.997 23.304c2.309 13.463-11.822 23.73-23.913 17.374l-20.928-11.002a16.481 16.481 0 00-15.338 0l-20.928 11.002c-12.091 6.357-26.222-3.91-23.913-17.374l3.997-23.304a16.483 16.483 0 00-4.74-14.588l-16.931-16.504c-9.782-9.535-4.384-26.147 9.134-28.111l23.398-3.4a16.48 16.48 0 0012.409-9.016L297.472 9.19c6.046-12.25 23.513-12.25 29.558 0z"
    fill="#fce25c"
  />
  <path
    d="M294.541 107.768c0 9.4 1.53 18.45 4.35 26.9l-15.24 8.02c-12.09 6.35-26.22-3.91-23.91-17.38l4-23.3c.91-5.35-.86-10.8-4.74-14.59l-16.94-16.5c-9.78-9.54-4.38-26.15 9.14-28.11l23.4-3.4a16.51 16.51 0 0012.41-9.02l10.46-21.2c6.05-12.25 23.51-12.25 29.56 0l10.46 21.2c.47.95 1.03 1.85 1.67 2.68-26.57 14.32-44.62 42.4-44.62 74.7z"
    fill="#fbd307"
  />
</svg>
`;

exports[`components/svg Test Suite Person Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`components/svg Test Suite Sun Test Suite matches snapshot 1`] = `
<svg
  className="sc-AxjAm lhDQpH"
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
    fill="#FFA600"
  />
  <ellipse
    cx="254.35"
    cy="254.691"
    fill="#FFDB2D"
    rx="155.069"
    ry="154.949"
  />
  <path
    d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
    fill="#FFCA00"
  />
</svg>
`;
